exports[`McpResponse > adds a prompt dialog 1`] = `
# test response
# Open dialog
prompt: message (default value: "default").
Call handle_dialog to handle it before continuing.
`;

exports[`McpResponse > allows response text lines to be added 1`] = `
# test response
Testing 1
Testing 2
`;

exports[`McpResponse > list pages 1`] = `
# test response
## Pages
1: about:blank [selected]
`;

exports[`McpResponse > returns correctly formatted snapshot for a simple tree 1`] = `
# test response
## Latest page snapshot
uid=1_0 RootWebArea "My test page" url="about:blank"
  uid=1_1 button "Click me" focusable focused
  uid=1_2 textbox value="Input"

`;

exports[`McpResponse > saves snapshot to file 1`] = `
# test response
## Latest page snapshot
Saved snapshot to <file>
`;

exports[`McpResponse > saves snapshot to file 2`] = `
uid=1_0 RootWebArea "My test page" url="about:blank"
  uid=1_1 ignored
    uid=1_2 ignored
      uid=1_3 complementary
        uid=1_4 StaticText "test"
          uid=1_5 InlineTextBox "test"

`;
